--- a/ckanext/amplus/fanstatic/less/_promoted.less
+++ b/ckanext/amplus/fanstatic/less/_promoted.less
@@ -1,24 +1,24 @@
-
 .hero {
     padding: 120px 0px;
     display: flex;
     justify-content: center;
     background: @brand-background;
-    & .hero-img {
+    
+    .hero-img {
         min-width: auto;
         width: 196px;
         height: 145px;
     }
-    & .media-image {
+    .media-image {
         display: flex;
         justify-content: center;
     }
-    & .page-heading {
+    .page-heading {
         padding-top: 30px;
         font-size: 50px;
         color: @brand-primary;
     }
-    & .promoted-desc {
+    .promoted-desc {
         font-size: 18px;
     }
 }
