--- a/ckanext/amplus/fanstatic/less/_data.less
+++ b/ckanext/amplus/fanstatic/less/_data.less
@@ -10,7 +10,7 @@
 .dataset-list {
   >.dataset-item {
     flex: 1 0 33.3%;
-    padding: 20px;
+    padding: 3rem;
     margin: 20px;
     background: @white;
     box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.1);
