--- a/ckanext/amplus/fanstatic/less/_facet_list.less
+++ b/ckanext/amplus/fanstatic/less/_facet_list.less
@@ -6,7 +6,7 @@
   font-weight: 600;
   padding: 7px 15px;
   margin-bottom: 1rem;
-  & div {
+  > div {
     margin-right: .5rem;
     padding: .9rem;
     border-radius: 50%;
@@ -23,9 +23,9 @@
 .nav-simple,
 .nav-facet{
   padding: 1rem 0;
-  & .nav-item  {
+  .nav-item  {
     border-bottom: none;
-    &.active a{
+    .active a{
       border-top-right-radius: 20px;
       border-bottom-right-radius: 20px;
       background-color: @brand-extra-light;
@@ -49,30 +49,17 @@
         border-top-right-radius: 20px;
         border-bottom-right-radius: 20px;
         background-color: @brand-extra-light;
-        
         &:after {
         background-size: contain;
         background-position: center;
         transform: translate(-10px, 4px);
         width: 10px;
         height: 10px;
-       
-        }
-      }
-    
-    }
-    &.active{
-      &:hover{
-        & span{
-          color: @brand-primary;
         }
       }
     }
   }
 } 
-.keyword-section{
-  order: -2;
-}
 .keyword-list {
   padding: .5rem 0 0 1rem;
   list-style: none;
@@ -120,7 +107,7 @@
   }
 }
 .license{
-  >.module-content{
+  .module-content{
     background-color:@white;
     padding-left: 0px;
   }
