Update .group-heading padding

--- a/ckanext/amplus/fanstatic/less/_visualize.less
+++ b/ckanext/amplus/fanstatic/less/_visualize.less
@@ -33,7 +33,7 @@
     font-size: 40px;
     text-align: center;
     font-weight: 400;
-    padding: 40px 0 80px 0;
+    padding: 80px 40px 40px;
 }
 
 .group-container {
