Update .hero styling

--- a/ckanext/amplus/fanstatic/less/_promoted.less
+++ b/ckanext/amplus/fanstatic/less/_promoted.less
@@ -2,8 +2,8 @@
     padding: 120px 0px;
     display: flex;
     justify-content: center;
-    background: @brand-background;
-    
+    background: @white;
+
     .hero-img {
         min-width: auto;
         width: 196px;
@@ -20,5 +20,6 @@
     }
     .promoted-desc {
         font-size: 18px;
+        margin-bottom: 0;
     }
 }
