Update .masthead and .primary .nav styling

--- a/ckanext/amplus/fanstatic/less/_nav.less
+++ b/ckanext/amplus/fanstatic/less/_nav.less
@@ -26,10 +26,13 @@
   }
 }
 
-.nav {
-  >li {
-    >a {
-      padding: 6px 12px;
+.masthead,
+.primary {
+  .nav {
+    >li {
+      >a {
+        padding: 6px 12px;
+      }
     }
   }
 }
