Refactor _group.less

--- a/ckanext/amplus/fanstatic/less/_group.less
+++ b/ckanext/amplus/fanstatic/less/_group.less
@@ -1,12 +1,17 @@
-.group-heading {
-    font-size: 40px;
-    text-align: center;
-    font-weight: 400;
-    padding: 40px 0 80px 0;
+.group-topics{
+  .group-heading{
+    margin-top: 60px;
+  }
 }
 
-.group-container {
-    padding: 100px 140px;
+.group-topics-list{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.group-item{
+  flex: 1 1 calc(100%/4);
+  margin: 10px;
 }
 
 .group-topics, .group-container {
