--- a/ckanext/amplus/fanstatic/less/_base.less
+++ b/ckanext/amplus/fanstatic/less/_base.less
@@ -1,5 +1,6 @@
 body {
   font-family: 'Barlow', sans-serif;
+  background: @brand-primary;
 
   .main,
   & [role=main] {
@@ -53,6 +54,12 @@ body {
 
 a {
   color: @brand-primary;
+
+  &:hover,
+  &:focus,
+  &:active {
+    color: inherit;
+  }
 }
 
 .module-resource {
