--- a/ckanext/amplus/fanstatic/less/_navigation-tabs.less
+++ b/ckanext/amplus/fanstatic/less/_navigation-tabs.less
@@ -3,13 +3,14 @@
     >li {
       &.active {
         a {
-          .btn-default-reset;
-          background-color: inherit;
+          border: none;
+          .btn-primary-reset;
         }
       }
 
       a {
-        .btn-primary-reset;
+        .btn-default-reset;
+        background-color: @white;
       }
     }
   }
