Update .filtered.pill background-color

--- a/ckanext/amplus/fanstatic/less/_forms.less
+++ b/ckanext/amplus/fanstatic/less/_forms.less
@@ -4,7 +4,7 @@
 .filtered.pill {
   border-radius: 0;
   padding: .4rem .8rem;
-  background-color: #E6E6E6;
+  background-color: @brand-extra-light;
   color: @gray-medium;
   margin: .5rem .2rem;
    a {
