Add mixins for hover

--- a/ckanext/amplus/fanstatic/less/_mixins.less
+++ b/ckanext/amplus/fanstatic/less/_mixins.less
@@ -39,3 +39,17 @@
   border-radius: 0;
   box-shadow: @shadow-light;
 }
+
+.nav-item-after {
+  background-size: contain;
+  background-position: center;
+  transform: translate(-10px, 4px);
+  width: 10px;
+  height: 10px;
+}
+
+.nav-item-hover-active {
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
+  background-color: @brand-extra-light;
+}
