--- a/ckanext/amplus/fanstatic/less/_facet_list.less
+++ b/ckanext/amplus/fanstatic/less/_facet_list.less
@@ -26,15 +26,9 @@
   .nav-item  {
     border-bottom: none;
     .active a{
-      border-top-right-radius: 20px;
-      border-bottom-right-radius: 20px;
-      background-color: @brand-extra-light;
+      .nav-item-hover-active;
       &:after {
-        background-size: contain;
-        background-position: center;
-        width: 10px;
-        height: 10px;
-        transform: translate(-10px, 4px);
+        .nav-item-after;
       }
     }
      a {
@@ -46,15 +40,9 @@
       &:hover,
       &:active,
       &:focus {
-        border-top-right-radius: 20px;
-        border-bottom-right-radius: 20px;
-        background-color: @brand-extra-light;
+        .nav-item-hover-active;
         &:after {
-        background-size: contain;
-        background-position: center;
-        transform: translate(-10px, 4px);
-        width: 10px;
-        height: 10px;
+          .nav-item-after;
         }
       }
     }
