--- a/ckanext/amplus/fanstatic/less/_data.less
+++ b/ckanext/amplus/fanstatic/less/_data.less
@@ -3,7 +3,7 @@
   .dataset-list {
     display: flex;
     flex-wrap: wrap;
-    width: 100%;
+    margin: auto -1rem;
   }
 }
 
@@ -11,7 +11,7 @@
   >.dataset-item {
     flex: 1 0 33.3%;
     padding: 3rem;
-    margin: 20px;
+    margin: 1rem;
     background: @white;
     box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.1);
   }
