Replace 1rem with @gutter-small

--- a/ckanext/amplus/fanstatic/less/_nav.less
+++ b/ckanext/amplus/fanstatic/less/_nav.less
@@ -94,7 +94,7 @@
 
   .logo {
     max-width: 350px;
-    padding: 2rem 0 1rem 2.5rem;
+    padding: 2rem 0 @gutter-small 2.5rem;
 
     >img {
       max-width: 100%;
