--- a/ckanext/amplus/fanstatic/less/_footer.less
+++ b/ckanext/amplus/fanstatic/less/_footer.less
@@ -1,4 +1,5 @@
 .site-footer {
+  color: @silver;
   background: @white;
   padding: 100px 120px;
 
@@ -10,7 +11,6 @@
 }
 
 .text-description {
-  color: @silver;
   font-size: 15px;
   font-weight: 500;
   margin-top: 25px;
@@ -18,16 +18,27 @@
 
 .footer-nav-title {
   color: @brand-secondary;
-  font-size: 16px;
+  font-size: 18px;
   font-weight: 600;
 }
 
-.footer-nav li {
-  padding: 5px 0;
+.footer-nav {
+  margin-top: @gutter-small;
+  margin-bottom: @gutter-small;
+  li {
+    padding: 5px 0;
+    a {
+      color: @silver;
+      font-size: 16px;
+      font-weight: 600;
+    }
+  }
+}
 
-  a {
-    color: @silver;
-    font-size: 16px;
-    font-weight: 600;
+.footer-links {
+  ul {
+    .footer-nav;
+    padding-left: 0;
+    list-style: none;
   }
 }
