Refactor _resource-item.less

--- a/ckanext/amplus/fanstatic/less/_resource-item.less
+++ b/ckanext/amplus/fanstatic/less/_resource-item.less
@@ -13,6 +13,11 @@
 
     .heading {
       display: flex;
+      align-items: center;
+    }
+
+    .display-name{
+      margin: auto @gutter-medium;
     }
 
     .description{
@@ -45,7 +50,6 @@
     .format-label {
       position: inherit;
       order: -1;
-      margin-right: @gutter-medium;
     }
   }
 
