Update .dataset-list styling

--- a/ckanext/amplus/fanstatic/less/_data.less
+++ b/ckanext/amplus/fanstatic/less/_data.less
@@ -3,7 +3,8 @@
   .dataset-list {
     display: flex;
     flex-wrap: wrap;
-    margin: auto -@gutter-small;
+    min-width: 100%;
+    margin: auto -@gutter-medium;
   }
 }
 
@@ -11,7 +12,7 @@
   >.dataset-item {
     flex: 1 0 33.3%;
     padding: @gutter-large;
-    margin: @gutter-small;
+    margin: @gutter-small @gutter-medium;
     background: @white;
     box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.1);
   }
