--- a/ckanext/amplus/templates/home/layout1.html
+++ b/ckanext/amplus/templates/home/layout1.html
@@ -51,7 +51,7 @@
                 {% if recent_datasets %}
                   {{ h.snippet('snippets/package_list.html', packages=recent_datasets) }}
                 {% else %}
-                  <p class="empty">{{ _('No datasets available.') }}</p>
+                  <p class="empty">{{ _('No datasets have been added yet') }}</p>
                 {% endif %}
             </div>
             <div class="data tab-pane fade in active" id="visualize">
@@ -62,13 +62,13 @@
                     {% snippet 'home/snippets/featured_chart_view.html', featured_chart=featured_chart %}
                   {% endfor %}
                 {% else %}
-                  <p class="empty">{{ _('No chart views have been created yet.') }}</p>
+                  <p class="empty">{{ _('No chart views have been created yet') }}</p>
                 {% endif %}
               {% endblock %}
             </div>
             <div class="data tab-pane fade" id="locate">
               <!-- Map Section -->
-              <p class="empty">{{ _('No map views have been created yet.') }}</p>
+              <p class="empty">{{ _('No map views have been created yet') }}</p>
             </div>
           </div>
       </div>
