Add .group-container .empty styling

--- a/ckanext/amplus/fanstatic/less/_group.less
+++ b/ckanext/amplus/fanstatic/less/_group.less
@@ -4,6 +4,13 @@
   }
 }
 
+.group-container{
+  .empty{
+    margin: auto;
+    font-size: 20px;
+  }
+}
+
 .group-topics-list{
     display: flex;
     flex-wrap: wrap;
