--- a/ckanext/amplus/templates/snippets/custom_group_item.html
+++ b/ckanext/amplus/templates/snippets/custom_group_item.html
@@ -1,34 +1,31 @@
 {% block featured_item %}
-  <div class="group-item module module-narrow module-shallow">
+  <a href="{{ h.url_for(controller='group', action='read', id=group.name) }}" class="group-item module module-narrow module-shallow">
     {% block featured_item_header %}
-      <header class="module-heading">
-        {% set truncate=truncate or 0 %}
-        {% set truncate_title = truncate_title or 0 %}
-        {% set title = group.title or group.name %}
+      {% set truncate=truncate or 0 %}
+      {% set truncate_title = truncate_title or 0 %}
+      {% set title = group.title or group.name %}
+      <div class="title-wrap">
         {% block featured_item_header_image %}
-            <a class="module-image" href="{{ h.url_for(controller='group', action='read', id=group.name) }}">
-                <div class="group-icon">
-                  <i class="fa fa-folder-open" aria-hidden="true"></i>
-                </div>
-            </a>
+        <div class="group-icon">
+          <img src="{{ group.image_display_url or h.url_for_static('/base/images/placeholder-group.png') }}" alt="{{ group.name }}" />
+          <!-- <i class="fa fa-folder-open" aria-hidden="true"></i> -->
+        </div>
         {% endblock %}
         {% block featured_item_header_title %}
-          <h3 class="media-heading">
-            <a href="{{ h.url_for(controller='group', action='read', id=group.name) }}">{{ group.title or group.name }}</a>
-          </h3>
+        <h3 class="group-title">{{ group.title or group.name }}</h3>
         {% endblock %}
-        {% block featured_item_header_description %}
-          {% if group.description %}
-            {% if truncate == 0 %}
-              <p class="group-item-desc">{{ h.markdown_extract(group.description)|urlize }}</p>
-            {% else %}
-              <p class="group-item-desc">{{ h.markdown_extract(group.description)|urlize }}</p>
-            {% endif %}
+      </div>
+      {% block featured_item_header_description %}
+        {% if c.controller == 'home' and group.description %}
+          {% if truncate == 0 %}
+            <p class="group-desc">{{ h.markdown_extract(group.description)|urlize }}</p>
+          {% else %}
+            <p class="group-desc">{{ h.markdown_extract(group.description)|urlize }}</p>
           {% endif %}
-        {% endblock %}
-      </header>
+        {% endif %}
+      {% endblock %}
     {% endblock %}
     {% block featured_item_content %}
     {% endblock %}
-  </div>
+  </a>
 {% endblock %}
