Add LESS variables

--- a/ckanext/amplus/fanstatic/less/_variables.less
+++ b/ckanext/amplus/fanstatic/less/_variables.less
@@ -42,3 +42,5 @@
 @gutter-list-item-medium: @gutter-list-item-small * 2;
 @gutter-list-item-large: @gutter-list-item-small * 3;
 
+@group-icon-size: 8rem;
+@animation-duration: 200ms;
