--- a/ckanext/amplus/fanstatic/less/_group.less
+++ b/ckanext/amplus/fanstatic/less/_group.less
@@ -1,66 +1,99 @@
-.group-topics{
-  .group-heading{
+.group-topics {
+  .group-heading {
     margin-top: 60px;
   }
 }
 
-.group-container{
-  .empty{
+.primary {
+  .group-topics {
+    padding: @gutter-small @gutter-medium;
+  }
+}
+
+.group-container {
+  .empty {
     margin: auto;
     font-size: 20px;
   }
 }
 
-.group-topics-list{
-    display: flex;
-    flex-wrap: wrap;
+.group-topics-list {
+  .flex;
+  .flex-wrap;
+  .flex-justify-center;
 }
 
-.group-item{
-  flex: 1 1 calc(100%/4);
+.group-item {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  flex: 0 1 21.5%;
   margin: @gutter-medium;
+  padding: @gutter-large;
+  background-color: @white;
+  box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.1);
+  color: @gray-medium;
+  transition: background-color @animation-duration;
+
+  &:hover{
+    color: @white;
+    background-color: @brand-secondary;
+  }
+
+  &,
+  &:hover,
+  .title {
+    text-decoration: none;
+  }
+
+  .title-wrap {
+    .flex;
+    .flex-align-center;
+  }
 }
 
-.group-topics, .group-container {
-    background: @brand-background;
+.group-topics,
+.group-container {
+  background: @brand-background;
 
-    .module-heading {
-        height: 100%;
-        margin: 12px 0px;
-        box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.1);
+  .group-title {
+    font-size: 22px;
+    font-weight: 600;
+    line-height: 1.25;
+    margin: auto @gutter-medium;
+  }
 
-        .module-image {
-            padding: 10px 0 0 10px;
-        }
+  .group-desc {
+    margin-top: @gutter-medium;
+    font-size: 16px;
+    padding: 0 @gutter-medium;
+  }
 
-        .group-icon {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 50px;
-            width: 50px;
-            background-color: @oval-bg;
-            border-radius: 50%;
+  .module-image {
+    padding: @gutter-small;
+  }
 
-            i {
-                font-size: 25px;
-                color: @brand-primary;
-                padding: 4px 0 0 6px;
-            }
-        }
+  .group-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: @group-icon-size;
+    width: @group-icon-size;
+    background-color: @oval-bg;
+    border-radius: 50%;
+    overflow: hidden;
+    flex-shrink: 0;
 
-        .media-heading, .group-item-desc {
-            margin-left: 85px;
-        }
-
-        .group-item-desc {
-            font-size: 18px;
-        }
-
-        .media-heading {
-            margin-top: 20px;
-            font-size: 25px;
-            font-weight: 600;
-        }
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
     }
+
+  }
+
+  .group-item-desc {
+    font-size: 18px;
+  }
+
 }
