Add tag as mixin

--- a/ckanext/amplus/fanstatic/less/_mixins.less
+++ b/ckanext/amplus/fanstatic/less/_mixins.less
@@ -40,16 +40,12 @@
   box-shadow: @shadow-light;
 }
 
-.nav-item-after {
-  background-size: contain;
-  background-position: center;
-  transform: translate(-10px, 4px);
-  width: 10px;
-  height: 10px;
-}
-
-.nav-item-hover-active {
-  border-top-right-radius: 20px;
-  border-bottom-right-radius: 20px;
-  background-color: @brand-extra-light;
+.tag-list-item{
+  padding: .4rem .8rem;
+  margin: .4rem;
+  background-color: @gray-extra-light;
+  border-radius: 0;
+  border: none;
+  color: @gray-medium;
+  font-size: 12px;
 }
