--- a/ckanext/amplus/templates/package/read.html
+++ b/ckanext/amplus/templates/package/read.html
@@ -1,32 +1,12 @@
-{% extends "package/read_base.html" %}
+{% ckan_extends %}
 
 {% block primary_content_inner %}
-  {{ super() }}
   {% block package_description %}
-    {% if pkg.private %}
-    {% endif %}
-    <h1>
-      {% block page_heading %}
-        {{ h.dataset_display_name(pkg)}}
-        {% if pkg.state.startswith('draft') %}
-          [{{ _('Draft') }}]
-        {% endif %}
-        {% if pkg.state == 'deleted' %}
-          [{{ _('Deleted') }}]
-        {% endif %}
-      {% endblock %}
-    </h1>
-    {% block package_notes %}
-      {% if pkg.notes %}
-        <div class="notes embedded-content">
-          {{ h.render_markdown(h.get_translated(pkg, 'notes')) }}
-        </div>
-      {% endif %}
-    {% endblock %}
-    {# FIXME why is this here? seems wrong #}
-    <span class="insert-comment-thread"></span>
+   {{ super() }}
   {% endblock %}
+
   {% block package_resources %}
     {% snippet "package/snippets/resources_list.html", pkg=pkg, resources=pkg.resources %}
   {% endblock %}
+
 {% endblock %}
