--- a/ckanext/amplus/templates/snippets/facet_list.html
+++ b/ckanext/amplus/templates/snippets/facet_list.html
@@ -1,23 +1,5 @@
-{% block facet_list %}
-{% set hide_empty = hide_empty or false %}
-{% with items = items or h.get_facet_items_dict(name) %}
-{% if items or not hide_empty %}
-{% if within_tertiary %}
-{% set nav_class = 'nav nav-pills nav-stacked' %}
-{% set nav_item_class = ' ' %}
-{% set wrapper_class = 'nav-facet nav-facet-tertiary' %}
-{% endif %}
-{% block facet_list_item %}
-{% set title = title or h.get_facet_title(name) %}
-<section class="{{ wrapper_class or 'module module-narrow module-shallow' }}">
-  {% block facet_list_heading %}
-  <h2 class="module-heading flex flex-align-center">
-    <div class="flex flex-align-center flex-justify-center">
-    <i class="fa fa-folder-open "></i>
-  </div>
-  {{ title }}
-  </h2>
-  {% endblock %}
+{% ckan_extends %}
+{{ super() }}
   {% block facet_list_items %}
   {% with items = items or h.get_facet_items_dict(name) %}
   {% if items %}
@@ -70,8 +52,4 @@
   {% endif %}
   {% endwith %}
   {% endblock %}
-</section>
-{% endblock %}
-{% endif %}
-{% endwith %}
-{% endblock %}
+
