--- a/ckanext/amplus/fanstatic/css/custom.css
+++ b/ckanext/amplus/fanstatic/css/custom.css
@@ -37,19 +37,14 @@
   -webkit-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
           box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
 }
-.nav-item-after {
-  background-size: contain;
-  background-position: center;
-  -webkit-transform: translate(-10px, 4px);
-      -ms-transform: translate(-10px, 4px);
-          transform: translate(-10px, 4px);
-  width: 10px;
-  height: 10px;
-}
-.nav-item-hover-active {
-  border-top-right-radius: 20px;
-  border-bottom-right-radius: 20px;
-  background-color: #EBD3E6;
+.tag-list-item {
+  padding: 0.4rem 0.8rem;
+  margin: 0.4rem;
+  background-color: #E6E6E6;
+  border-radius: 0;
+  border: none;
+  color: #414141;
+  font-size: 12px;
 }
 .hero {
   padding: 120px 0px;
@@ -352,31 +347,10 @@ a:active {
   border-radius: 0;
   outline: none;
 }
-.side-heading {
-  color: #6033A7;
-  font-size: 18px;
-  font-weight: 600;
-  padding: 0.5rem 0;
-  margin: 0;
-}
-.header-primary {
-  color: #414141;
-  font-weight: 400;
-  font-size: 40px;
-}
 .module-content > h1 {
   color: #414141;
   font-weight: 400;
   font-size: 40px;
-}
-.side-inner {
-  color: #414141;
-}
-.side-inner > a {
-  color: #414141;
-}
-.modal {
-  background-color: unset;
 }
 .control input {
   background: #fff;
@@ -386,21 +360,6 @@ a:active {
   font-size: 13px;
   font-weight: 600;
   text-decoration: underline;
-}
-.alert-warning {
-  background-color: #fff;
-  color: #6033A7;
-  border-color: #9F1A86;
-}
-.text-info {
-  color: #6033A7;
-}
-.text-info i {
-  color: #6033A7;
-}
-.resource-view-list.reordering li.ui-sortable-helper,
-.resource-view-list.reordering li.ui-sortable-helper .handle {
-  border: 1px solid #9F1A86;
 }
 .account-masthead {
   background: #6033A7;
@@ -824,128 +783,64 @@ a:active {
   border: none;
   font-size: 18px;
   font-weight: 600;
-  padding: 7px 15px;
+  padding: 1.2rem 1rem;
   margin-bottom: 1rem;
 }
-.module-heading > div {
-  margin-right: 0.5rem;
-  padding: 0.9rem;
-  border-radius: 50%;
-  background-color: #CDC4DD;
+.module-heading i {
+  padding: 0.5rem;
 }
-.module-heading > div .fa {
+.side-heading,
+.license .module-heading {
+  background-color: transparent;
   color: #6033A7;
-  -webkit-transform: translateX(1px);
-      -ms-transform: translateX(1px);
-          transform: translateX(1px);
+  font-size: 18px;
+  font-weight: 600;
+  padding: 0.7rem 0;
+  margin: 0;
 }
-.module-heading > div .fa:last-child {
-  margin-right: 0;
-}
-.nav-simple,
-.nav-facet {
-  padding: 1rem 0;
-}
-.nav-simple .nav-item,
-.nav-facet .nav-item {
-  border-bottom: none;
-}
-.nav-simple .nav-item .active a,
-.nav-facet .nav-item .active a {
-  border-top-right-radius: 20px;
-  border-bottom-right-radius: 20px;
-  background-color: #EBD3E6;
-}
-.nav-simple .nav-item .active a:after,
-.nav-facet .nav-item .active a:after {
-  background-size: contain;
-  background-position: center;
-  -webkit-transform: translate(-10px, 4px);
-      -ms-transform: translate(-10px, 4px);
-          transform: translate(-10px, 4px);
-  width: 10px;
-  height: 10px;
-}
-.nav-simple .nav-item a,
-.nav-facet .nav-item a {
-  padding: 0.3rem 2rem;
-  color: #414141;
-}
-.nav-simple .nav-item a:before,
-.nav-facet .nav-item a:before {
+.side-heading > i,
+.license .module-heading > i {
   display: none;
 }
-.nav-simple .nav-item a:hover,
-.nav-facet .nav-item a:hover,
-.nav-simple .nav-item a:active,
-.nav-facet .nav-item a:active,
-.nav-simple .nav-item a:focus,
-.nav-facet .nav-item a:focus {
-  border-top-right-radius: 20px;
-  border-bottom-right-radius: 20px;
-  background-color: #EBD3E6;
-}
-.nav-simple .nav-item a:hover:after,
-.nav-facet .nav-item a:hover:after,
-.nav-simple .nav-item a:active:after,
-.nav-facet .nav-item a:active:after,
-.nav-simple .nav-item a:focus:after,
-.nav-facet .nav-item a:focus:after {
-  background-size: contain;
-  background-position: center;
-  -webkit-transform: translate(-10px, 4px);
-      -ms-transform: translate(-10px, 4px);
-          transform: translate(-10px, 4px);
-  width: 10px;
-  height: 10px;
+.license .module-content {
+  padding-left: 0px;
 }
 .keyword-list {
-  padding: 0.5rem 0 0 1rem;
+  padding: 1rem 0 0 0;
   list-style: none;
 }
 .keyword-list li {
-  font-size: 12px;
-  font-weight: 500;
   padding: 0.4rem 0.8rem;
-  background-color: #E6E6E6;
   margin: 0.4rem;
+  background-color: #E6E6E6;
+  border-radius: 0;
+  border: none;
+  color: #414141;
+  font-size: 12px;
 }
 .keyword-list li a {
-  color: #414141;
+  color: inherit;
 }
-.content-side-box {
-  padding: 3rem;
-}
-.module-footer {
-  border-top: none;
-}
-.module-footer i {
-  font-size: 10px;
-  color: #6033A7;
+.nav-simple > li {
+  border-bottom: none;
 }
 .tags > ul {
   outline: none;
   background-color: inherit;
   border: none;
-}
-.tags > ul li {
-  margin-right: 0;
+  padding-left: 0;
 }
 .tags > ul .tag {
+  padding: 0.4rem 0.8rem;
+  margin: 0.4rem;
+  background-color: #E6E6E6;
   border-radius: 0;
   border: none;
   color: #414141;
   font-size: 12px;
-  padding: 0.4rem;
-  background-color: #E6E6E6;
-  margin: 0.5rem 0.2rem;
 }
-.tags > ul .tag:hover {
-  border-top: #6033A7;
-}
-.license .module-content {
-  background-color: #FFFFFF;
-  padding-left: 0px;
+.module-footer {
+  border-top: none;
 }
 .facet {
   font-weight: 600;
