--- a/ckanext/amplus/templates/package/read_base.html
+++ b/ckanext/amplus/templates/package/read_base.html
@@ -2,15 +2,20 @@
 {{ super() }}
 
 {% block secondary_content %}
+{% block secondary_help_content %}{% endblock %}
+
+  {% block package_info %}
+    {% snippet 'package/snippets/info.html', pkg=pkg %}
+{% endblock %}
 {% block package_organization %}
   {% if pkg.organization %}
     {% set org = h.get_organization(pkg.organization.name) %}
     {% snippet "snippets/organization.html", organization=org, has_context_title=true %}
   {% endif %}
 {% endblock %}
-<h2 class="module-heading flex flex-align-center">
-    <i class="fa fa-folder-open "></i>
-  Additional Information
+<h2 class="module-heading">
+  <i class="fa fa-info-circle"></i>
+    {{ _('Additional Info') }}
 </h2>
 {% block topics %}
 {% snippet "package/snippets/topics.html", pkg_dict=pkg %}
