Refactor h2 and h3 styles

--- a/ckanext/amplus/fanstatic/less/_facet_list.less
+++ b/ckanext/amplus/fanstatic/less/_facet_list.less
@@ -2,37 +2,19 @@
   color: @brand-primary;
   background-color: @brand-background;
   border: none;
-  font-size: 18px;
+  padding: 1.5rem;
+  font-size: 17px;
   font-weight: 600;
-  padding: 1.2rem 1rem;
-  margin-bottom: 1rem;
-
-  i {
-    padding: .5rem;
-  }
+  
 }
-
-.side-heading,
-.license .module-heading{
-  background-color: transparent;
+.side-heading{
   color: @brand-primary;
-  font-size: 18px;
   font-weight: 600;
-  padding: .7rem 0;
-  margin: 0;
-  >i{
-    display: none;
-  }
-}
-.license {
-  .module-content {
-    padding-left: 0px;
-  }
+  margin: 1rem 0;
 }
 .keyword-list {
   padding: 1rem 0 0 0;
   list-style: none;
-
   li {
     .tag-list-item;
 
