Replace flex declarations with class ones

--- a/ckanext/amplus/fanstatic/less/_data.less
+++ b/ckanext/amplus/fanstatic/less/_data.less
@@ -1,8 +1,8 @@
 .primary,
 .tab-content {
   .dataset-list {
-    display: flex;
-    flex-wrap: wrap;
+    .flex;
+    .flex-wrap;
     min-width: 100%;
     margin: auto -@gutter-medium;
   }
