--- a/ckanext/amplus/fanstatic/less/_group.less
+++ b/ckanext/amplus/fanstatic/less/_group.less
@@ -24,9 +24,9 @@
 }
 
 .group-item {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: column;
+  .flex;
+  .flex-wrap;
+  .flex-column;
   flex: 0 1 21.5%;
   margin: @gutter-medium;
   padding: @gutter-large;
@@ -74,9 +74,9 @@
   }
 
   .group-icon {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    .flex;
+    .flex-justify-center;
+    .flex-align-center;
     height: @group-icon-size;
     width: @group-icon-size;
     background-color: @oval-bg;
