--- a/ckanext/amplus/fanstatic/less/_resource-item.less
+++ b/ckanext/amplus/fanstatic/less/_resource-item.less
@@ -1,19 +1,19 @@
 .resource-list {
-  display: flex;
-  flex-wrap: wrap;
+  .flex;
+  .flex-wrap;
   .content-margin-fix;
 
   .resource-item {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
+    .flex;
+    .flex-wrap;
+    .flex-justify-between;
+    .flex-align-center;
     .content-item-layout;
     background: @white;
 
     .heading {
-      display: flex;
-      align-items: center;
+      .flex;
+      .flex-align-center;
     }
 
     .display-name{
@@ -44,7 +44,7 @@
     }
 
     .resource-item-list {
-      display: flex;
+      .flex;
     }
 
     .format-label {
