--- a/ckanext/amplus/fanstatic/less/_responsive-xl.less
+++ b/ckanext/amplus/fanstatic/less/_responsive-xl.less
@@ -1,8 +1,8 @@
 @media (min-width: @breakpoint-xl) {
   .footer-links {
     text-align: left;
-    display: flex;
-    justify-content: flex-end;
+    .flex;
+    .flex-justify-end;
 
     & div {
       margin-right: 40px;
