--- a/ckanext/amplus/fanstatic/less/_visualize.less
+++ b/ckanext/amplus/fanstatic/less/_visualize.less
@@ -1,76 +1,83 @@
 .data {
-    display: flex;
-    flex-wrap: wrap;
-    .visualize-card {
-        text-align: center;
-        flex: 1 0 33.3%;
-        padding: 20px;
-        margin: 20px;
-        background: @white;
-        box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.1);
-    }
+  .flex;
+  .flex-wrap;
+
+  .visualize-card {
+    text-align: center;
+    flex: 1 0 33.3%;
+    padding: 20px;
+    margin: 20px;
+    background: @white;
+    box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.1);
+  }
 }
 
-.visualize-card{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+.visualize-card {
+  .flex;
+  .flex-column;
+  .flex-justify-center;
+  .flex-align-center;
   overflow: auto;
 }
 
-.tab-content > .active {
-    display: flex;
+.tab-content>.active {
+  .flex;
 }
 
 .title {
-    font-size: 20px;
-    font-weight: 500;
-    text-decoration: underline;
+  font-size: 20px;
+  font-weight: 500;
+  text-decoration: underline;
 }
 
 .group-heading {
-    font-size: 40px;
-    text-align: center;
-    font-weight: 400;
-    padding: 80px 40px 40px;
+  font-size: 40px;
+  text-align: center;
+  font-weight: 400;
+  padding: 80px 40px 40px;
 }
 
 .group-container {
-    background: @brand-background;
-    padding: 100px 140px;
+  background: @brand-background;
+  padding: 100px 140px;
 
-    .toggle-section {
-        padding-bottom: 100px;
-        .active {
-            border-bottom: 4px solid @brand-secondary;
-            > a {
-                background: transparent;
-                border: none;
-                :hover {
-                    border: none;
-                }
-            }
-            .toggle-view {
-                color: @brand-secondary;
-            }
+  .toggle-section {
+    padding-bottom: 100px;
+
+    .active {
+      border-bottom: 4px solid @brand-secondary;
+
+      >a {
+        background: transparent;
+        border: none;
+
+        :hover {
+          border: none;
         }
-        .nav li > a:hover, .nav li > a:focus {
-            background: transparent;
-            border: none;
-            text-decoration: none;
-        }
+      }
+
+      .toggle-view {
+        color: @brand-secondary;
+      }
     }
 
-    .toggle-view {
-        font-size: 18px;
-        font-weight: 700;
-        letter-spacing: 1.8px;
-        color: @silver;
-        text-transform: uppercase;
+    .nav li>a:hover,
+    .nav li>a:focus {
+      background: transparent;
+      border: none;
+      text-decoration: none;
     }
+  }
+
+  .toggle-view {
+    font-size: 18px;
+    font-weight: 700;
+    letter-spacing: 1.8px;
+    color: @silver;
+    text-transform: uppercase;
+  }
 }
 
 .js .tab-content {
-    display: block;
+  display: block;
 }
