Add variables for shadow font-size font-weight font-family

--- a/ckanext/amplus/fanstatic/less/_variables.less
+++ b/ckanext/amplus/fanstatic/less/_variables.less
@@ -35,6 +35,28 @@
 @breakpoint-sm: ~'990px';
 @breakpoint-xs: ~'768px';
 
+@font-primary: 'Barlow', sans-serif;
+
+@font-size-small: 12px;
+@font-size-medium-small:13px;
+@font-size-medium: 14px;
+@font-size-medium-plus: 15px;
+@font-size-medium-large: 16px;
+@font-size-medium-large-plus: 17px;
+@font-size-large: 18px;
+@font-size-large-plus: 20px;
+@font-size-larger: 21px;
+@font-size-larger-plus: 22px;
+@font-size-largest: 24px;
+@font-size-huge: 40px;
+@font-size-grand: 50px;
+
+@font-weihgt-small:300;
+@font-weight-medium: 400;
+@font-weight-medium-large: 500;
+@font-weight-large: 600;
+@font-weight-larger:700;
+
 @gutter-small: 1rem;
 @gutter-medium: @gutter-small * 1.5;
 @gutter-large: @gutter-small * 3;
